--- a/css/style.css
+++ b/css/style.css
@@ -12,9 +12,6 @@ header img {
   margin: 18px 0 10px 0;
 }
 
-/*h1 h2 h3 h4 h5 h6 {
-    font-family: 'shrikhand';
-}*/
 h1 {
   font-size: 160%;
   letter-spacing: -1px;
@@ -49,7 +46,7 @@ h1 {
   border: none;
   border-radius: 30px;
   background-image: linear-gradient(to bottom right, #ff79da, #9356DC);
-  box-shadow: 8px 5px 15px #dddddd;
+  box-shadow: 8px 8px 15px #dddddd;
   color: white;
   font-weight: 500;
   letter-spacing: 0.5px;
@@ -59,16 +56,17 @@ h1 {
 #functioning {
   display: flex;
   flex-direction: column;
+  margin-bottom: 50px;
 }
 #functioning h1 {
-  margin: 2rem 0 15px 15px;
+  padding: 2rem 0 15px 15px;
 }
 
 .functioning--elt {
   background-color: #f6f6f6;
-  box-shadow: 8px 5px 15px #dddddd;
+  box-shadow: 8px 8px 15px #dddddd;
   width: 240px;
-  padding: 18px;
+  padding: 24px 18px;
   border-radius: 20px;
   margin: auto;
   margin-top: 20px;
@@ -88,7 +86,7 @@ h1 {
   border-radius: 40px;
   font-size: small;
   font-weight: 400;
-  padding: 2.5px 6px 2px 6px;
+  padding: 4px 6px 2px 6px;
   position: absolute;
   margin-left: -270px;
 }
@@ -97,6 +95,44 @@ h1 {
 }
 .functioning--elt--highlight__icon {
   color: #9356DC;
+}
+
+#restaurants {
+  background-color: #f6f6f6;
+}
+#restaurants h1 {
+  padding: 2rem 0 15px 15px;
+}
+
+.restaurant--card {
+  border-radius: 20px;
+  box-shadow: 8px 8px 15px #dddddd;
+  width: 90%;
+  margin: auto;
+}
+.restaurant--card__image {
+  object-fit: cover;
+  border-radius: 20px 20px 0 0;
+  width: 100%;
+  height: 200px;
+  overflow: hidden;
+}
+.restaurant--card__body {
+  display: flex;
+  padding: 0 15px;
+  justify-content: space-between;
+}
+.restaurant--card__text h3 {
+  margin-bottom: 8px;
+}
+.restaurant--card__text p {
+  margin: 0 0 8px 0;
+}
+.restaurant--card__like {
+  font-size: 140%;
+  font-weight: 100;
+  align-self: center;
+  justify-self: flex-start;
 }
 
 /*# sourceMappingURL=style.css.map */
