--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,7 +7,11 @@ $smooth : #7e7e7e;
 $primarylight : #f5edff;
 
 @mixin shadow {
-    box-shadow: 8px 5px 15px $shadow;
+    box-shadow: 8px 8px 15px $shadow;
+}
+
+@mixin title {
+    padding:2rem 0 15px 15px;
 }
 
 body {
@@ -23,11 +27,6 @@ header {
         margin:18px 0 10px 0;
         }
 }
-
-
-/*h1 h2 h3 h4 h5 h6 {
-    font-family: 'shrikhand';
-}*/
 
 h1 {
     font-size:160%;
@@ -74,8 +73,9 @@ h1 {
 #functioning {
     display:flex;
     flex-direction: column;
+    margin-bottom:50px;
     & h1 {
-        margin:2rem 0 15px 15px;
+        @include title();
     }
 }
 
@@ -83,7 +83,7 @@ h1 {
     background-color: $background;
     @include shadow();
     width:240px;
-    padding:18px;
+    padding:24px 18px;
     border-radius:20px;
     margin:auto;
     margin-top:20px;
@@ -102,7 +102,7 @@ h1 {
             border-radius: 40px;
             font-size:small ;
             font-weight: 400;
-            padding:2.5px 6px 2px 6px;
+            padding:4px 6px 2px 6px;
             position:absolute;
             margin-left:-270px;
         }
@@ -113,4 +113,46 @@ h1 {
                 }
         }
 }
+
+#restaurants {
+    background-color: $background;
+        & h1 {
+            @include title();
+        }
+}
+
+.restaurant--card {
+    border-radius:20px;
+    @include shadow();
+    width:90%;
+    margin:auto;
+        &__image {
+            object-fit: cover;
+            border-radius: 20px 20px 0 0;
+            width: 100%;
+            height: 200px;
+            overflow: hidden;
+        }
+        &__body {
+            display:flex;
+            padding:0 15px;
+            justify-content: space-between;
+        }
+        &__text {
+
+                & h3 {
+                    margin-bottom:8px;
+                }
+                & p {
+                    margin: 0 0 8px 0 ;
+                }
+        }
+        &__like {
+            font-size:140%;
+            font-weight:100;
+            align-self:center;
+            justify-self:flex-start;
+            }
+        }
+
 
