--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,10 @@ body {
   font-family: "roboto";
 }
 
+ul {
+  list-style-type: none;
+}
+
 header {
   text-align: center;
 }
@@ -109,17 +113,29 @@ h1 {
   box-shadow: 8px 8px 15px #dddddd;
   width: 90%;
   margin: auto;
+  margin-bottom: 20px;
+}
+.restaurant--card__new {
+  background-color: #99e2d0;
+  color: #278870;
+  border-radius: 3px;
+  display: block;
+  position: absolute;
+  padding: 6px 10px;
+  font-size: 80%;
+  font-weight: 600;
+  margin: auto;
 }
 .restaurant--card__image {
   object-fit: cover;
   border-radius: 20px 20px 0 0;
   width: 100%;
-  height: 200px;
+  height: 180px;
   overflow: hidden;
 }
 .restaurant--card__body {
   display: flex;
-  padding: 0 15px;
+  padding: 0 25px 10px 15px;
   justify-content: space-between;
 }
 .restaurant--card__text h3 {
@@ -127,12 +143,32 @@ h1 {
 }
 .restaurant--card__text p {
   margin: 0 0 8px 0;
+  font-size: 18px;
 }
 .restaurant--card__like {
   font-size: 140%;
   font-weight: 100;
   align-self: center;
   justify-self: flex-start;
+}
+
+footer {
+  background-color: #353535;
+  color: white;
+  padding-bottom: 20px;
+}
+footer h2 {
+  font-family: shrikhand;
+  font-weight: 50;
+  font-size: 120%;
+  letter-spacing: normal;
+  padding: 23px 0 0 35px;
+}
+footer li {
+  padding: 3px;
+}
+footer .fas {
+  padding-right: 10px;
 }
 
 /*# sourceMappingURL=style.css.map */
