--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,8 @@ $shadow : #dddddd;
 $background : #f6f6f6;
 $smooth : #7e7e7e;
 $primarylight : #f5edff;
+$darkcolor : #353535;
+
 
 @mixin shadow {
     box-shadow: 8px 8px 15px $shadow;
@@ -19,6 +21,10 @@ body {
     margin:auto;
     box-sizing: border-box;
     font-family:'roboto';
+}
+
+ul {
+    list-style-type: none;
 }
 
 header {
@@ -38,7 +44,7 @@ h1 {
     background-color: #eaeaea;
     padding:20px;
     text-align: center;
-    color: #353535;
+    color: $darkcolor;
     font-weight:600;
     box-shadow: inset 0px 3px 3px $shadow;
 }
@@ -126,16 +132,29 @@ h1 {
     @include shadow();
     width:90%;
     margin:auto;
+    margin-bottom:20px;
+        &__new {
+            background-color:$tertiary;
+            color: darken($tertiary,40%);
+            border-radius:3px;
+            display: block;
+            position:absolute;
+            padding:6px 10px;
+            font-size: 80%;
+            font-weight: 600;
+            //margin:15px 15px 0 255px;;
+            margin:auto;
+        }
         &__image {
             object-fit: cover;
             border-radius: 20px 20px 0 0;
             width: 100%;
-            height: 200px;
+            height: 180px;
             overflow: hidden;
         }
         &__body {
             display:flex;
-            padding:0 15px;
+            padding:0 25px 10px 15px;
             justify-content: space-between;
         }
         &__text {
@@ -145,6 +164,7 @@ h1 {
                 }
                 & p {
                     margin: 0 0 8px 0 ;
+                    font-size: 18px;
                 }
         }
         &__like {
@@ -155,4 +175,20 @@ h1 {
             }
         }
 
+footer {
+    background-color: $darkcolor;
+    color:white;
+    padding-bottom:20px;
+        & h2 {
+            font-family: shrikhand;
+            font-weight:50;
+            font-size:120%;
+            letter-spacing:normal;
+            padding:23px 0 0 35px;
+        }
+        & li {
+            padding:3px;
+        }
+        & .fas {padding-right:10px;}
+}
 
