--- a/css/style.css
+++ b/css/style.css
@@ -125,21 +125,20 @@ h1 {
   background: #f5edff;
   content: "";
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 0;
+  left: 0;
+  transform: scaleX(0);
+  transform-origin: left;
   z-index: -1;
-  width: 240px;
+  width: 100%;
   border-radius: 20px;
   margin: auto;
-  transition: all 0.4s ease-out;
-  width: 0%;
+  transition: all 0.3s ease-in-out;
   height: 100%;
-  transform: rotate 70deg translate -50%, -50%;
 }
 
 .functioning--elt:hover::before {
-  width: 100%;
+  transform: scaleX(1);
 }
 
 .functioning--elt:hover .functioning--elt__icon {
