--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@ $primarylight : #f5edff;
 $darkcolor : #353535;
 
 
+
 @mixin shadow {
     box-shadow: 8px 8px 15px $shadow;
 }
@@ -140,7 +141,6 @@ h1 {
         }
         &:hover {
             @include strongershadow();
-
         }
 }
 
@@ -148,21 +148,21 @@ h1 {
     background: $primarylight;
     content: "";
     position: absolute;
-    top:50%;
-    left:50%;
-    transform: translate(-50%, -50%);
+    top:0;
+    left:0;
+    transform: scaleX(0);
+    transform-origin: left;
     z-index: -1;
-    width:240px;
+    width: 100%;
     border-radius:20px;
     margin:auto;
-    transition:all 0.4s ease-out;
-    width:0%;
+    transition:all 0.3s ease-in-out;
     height:100%;
-    transform: rotate (70deg) translate (-50%, -50%) ;
 }
 
 .functioning--elt:hover::before {
-    width:100%;
+    transform: scaleX(1);
+
 
 }
 
