--- a/sass/main.scss
+++ b/sass/main.scss
@@ -222,23 +222,21 @@ h1 {
             position:absolute;
             left:80%;
             z-index: 0;
-                &--activated {
-                    background-image:linear-gradient(to top, $secondary, $primary);
-                    background-clip:text;
-                    -webkit-background-clip: text;
-                    color:transparent;     
-                    -webkit-text-fill-color: transparent;
-                    font-size: 110%;
-                    position:absolute;
-                    left:-2%;
-                    align-self: center;
-                    opacity: 0;
-                    /*transform: scale(0);*/
-                        &:hover {
-                            opacity:1;
-                            transform: scale(1.1);
-                            transition: all 0.4s ease;
-                        }
+            &--activated {
+                background-image:linear-gradient(to top, $secondary, $primary);
+                background-clip:text;
+                -webkit-background-clip: text;
+                color:transparent;     
+                -webkit-text-fill-color: transparent;
+                font-size: 110%;
+                position:absolute;
+                left:-1%;
+                align-self: center;
+                transform: scale(0);
+                    }
+            &:hover .restaurant--card__like--activated {
+                animation:liked 1s both ease;
+
                 }
             
             }
@@ -247,6 +245,21 @@ h1 {
             @include strongershadow();
         }
         }
+
+@keyframes liked {
+    0% {
+        transform: scale(0);
+    }
+    90%  {
+        transform:scale(1);
+    }
+    95% {
+        transform:translatex(3%);
+    }
+    100% {
+        transform:translatex(-3%);
+    }
+}
 
 
 footer {
