--- a/sass/main.scss
+++ b/sass/main.scss
@@ -85,7 +85,6 @@ h1 {
     color:white;
     font-weight:500;
     letter-spacing: 0.5px;;
-    margin-top:10px;
         &:hover {
             @include strongershadow();
             transform: scale(1.03);
@@ -93,7 +92,7 @@ h1 {
         }
 }
 
-#functioning {
+.functioning {
     display:flex;
     flex-direction: column;
     justify-content: space-around;
@@ -228,7 +227,7 @@ h1 {
                 transform: scale(0);
                     }
             &:hover .restaurant--card__like--activated {
-                animation:liked 1s both ease;
+                animation:liked 0.6s both ease;
 
                 }
             
@@ -244,13 +243,15 @@ h1 {
         transform: scale(0);
     }
     90%  {
-        transform:scale(1);
+        transform:scale(1) translateX(3%);
     }
+
     95% {
-        transform:translatex(3%);
+        transform:translateX(-3%)
     }
+
     100% {
-        transform:translatex(-3%);
+        transform:translatex(0);
     }
 }
 
