--- a/sass/Pages/Menu.scss
+++ b/sass/Pages/Menu.scss
@@ -57,7 +57,6 @@ nav {
     display:flex;
     justify-content: space-between;
     align-items: flex-end;
-    animation: cardappariton 2s both ease;
          &--text {
             flex-direction: column;
         }
@@ -112,39 +111,13 @@ nav {
 }
 
 
-
-@keyframes checked-animation {
-    0% {
-        transform: rotate(0);
-    }
-    100% {
-        transform: rotate(360deg);
-    }
-}
-
-@keyframes checked-background-animation {
-    0% {
-        transform: scaleX(0);
-    }
-    100% {
-        transform: scaleX(1);
-    }
-}
-
-
 .greenline {
     height:4px;
     width:50px;
     background-color: $tertiary;
     transform: translateX(4000px);
-    animation: greenline-entrance 0.6s  both;
+    animation: greenline-entrance 0.6s 1.2s  both;
     margin-bottom:20px;
-}
-
-@keyframes greenline-entrance {
-    100% {
-        transform: translateX(0px);
-    }
 }
 
 
@@ -154,23 +127,47 @@ nav {
 }
 
 
-@keyframes cardapparition {
-    0% {
-        opacity:0;
-    }
-    100% {
-        opacity: 1;
-    }
-}
-@keyframes cardapparition {
-    from {
-      -webkit-transform: translateY(15px);
-              transform: translateY(15px);
-      opacity: 0;
-    }
-    to {
-      -webkit-transform: translateY(0);
-              transform: translateY(0);
-      opacity: 1;
-    }
+  .card1 {
+    @include cardapparition;
+    animation-delay:0.2s
+  }
+
+  .card2 {
+    @include cardapparition;
+    animation-delay:0.4s
+  }
+
+  .card3 {
+    @include cardapparition;
+    animation-delay:0.6s
+  }
+
+  .card4 {
+    @include cardapparition;
+    animation-delay:0.8s
+  }
+
+  .card5 {
+    @include cardapparition;
+    animation-delay:1s
+  }
+
+  .card6 {
+    @include cardapparition;
+    animation-delay:1.2s
+  }
+
+  .card7 {
+    @include cardapparition;
+    animation-delay:1.4s
+  }
+
+  .card8 {
+    @include cardapparition;
+    animation-delay:1.6s
+  }
+
+  .card9 {
+    @include cardapparition;
+    animation-delay:1.8s
   }
