--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,7 @@
 @import "../sass/utils/variables";
 @import "../sass/Utils/mixins";
 @import "../sass/Pages/Menu.scss";
+@import"../sass/Utils/keyframes.scss";
 
 
 body {
@@ -238,22 +239,7 @@ h1 {
         }
         }
 
-@keyframes liked {
-    0% {
-        transform: scale(0);
-    }
-    90%  {
-        transform:scale(1) translateX(3%);
-    }
 
-    95% {
-        transform:translateX(-3%)
-    }
-
-    100% {
-        transform:translatex(0);
-    }
-}
 
 
 footer {
